// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`reference recipe dry runs > snapshots the hdr-safe-grade checklist 1`] = `
{
  "params": {
    "clip": "/media/source.mov",
    "outputPath": "/renders/hlg-master.mp4",
    "target": "hlg",
  },
  "recipeId": "hdr-safe-grade",
  "steps": [
    {
      "args": {
        "script_string": "/* projectInfo: rendered at run time */",
      },
      "contractArgs": {
        "action": "inspect",
        "mediaPath": "/media/source.mov",
        "settings": {
          "includeColorMetadata": true,
          "includeFrameRateAndDuration": true,
        },
      },
      "id": "inspect-source-metadata",
      "operation": "projectInfo",
      "server": "aftereffects",
      "timeoutMs": 30000,
      "tool": "execute_extend_script",
      "verify": {
        "properties": {
          "structuredContent": {
            "required": [
              "width",
              "height",
              "frameRate",
              "durationSeconds",
            ],
            "type": "object",
          },
        },
        "required": [
          "structuredContent",
        ],
        "type": "object",
      },
    },
    {
      "args": {
        "script_string": "/* projectInfo: rendered at run time */",
      },
      "contractArgs": {
        "action": "configure",
        "settings": {
          "allowWorkingSpaceChange": true,
          "bitDepth": 32,
          "compensateForSceneReferredProfiles": true,
          "displayColorManagement": true,
          "intent": "technical-normalization-only",
          "linearizeWorkingSpace": false,
          "workingSpace": "Rec.2100 HLG Scene W100",
        },
      },
      "id": "configure-hlg-working-project",
      "operation": "projectInfo",
      "server": "aftereffects",
      "timeoutMs": 30000,
      "tool": "execute_extend_script",
      "verify": {
        "properties": {
          "structuredContent": {
            "properties": {
              "bitsPerChannel": {
                "equals": 32,
                "type": "number",
              },
              "refused": {
                "equals": [],
                "type": "array",
              },
              "workingSpace": {
                "equals": "Rec.2100 HLG Scene W100",
                "type": "string",
              },
            },
            "required": [
              "workingSpace",
              "bitsPerChannel",
              "refused",
            ],
            "type": "object",
          },
        },
        "required": [
          "structuredContent",
        ],
        "type": "object",
      },
    },
    {
      "args": {
        "script_string": "/* createComp: rendered at run time */",
      },
      "contractArgs": {
        "backgroundColor": "#000000",
        "durationSeconds": "\${steps.inspect-source-metadata.result.structuredContent.durationSeconds}",
        "frameRate": "\${steps.inspect-source-metadata.result.structuredContent.frameRate}",
        "height": "\${steps.inspect-source-metadata.result.structuredContent.height}",
        "name": "Conductor HLG Technical Master",
        "pixelAspect": 1,
        "width": "\${steps.inspect-source-metadata.result.structuredContent.width}",
      },
      "id": "build-source-matched-composition",
      "operation": "createComp",
      "server": "aftereffects",
      "timeoutMs": 30000,
      "tool": "execute_extend_script",
      "verify": {
        "properties": {
          "structuredContent": {
            "required": [
              "compId",
            ],
            "type": "object",
          },
        },
        "required": [
          "structuredContent",
        ],
        "type": "object",
      },
    },
    {
      "args": {
        "script_string": "/* precompose: rendered at run time */",
      },
      "contractArgs": {
        "collapseTransformations": false,
        "compId": "\${steps.build-source-matched-composition.result.structuredContent.compId}",
        "layerIds": [],
        "motionBlur": false,
        "name": "Source Technical Grade",
        "sources": [
          {
            "path": "/media/source.mov",
            "role": "source",
            "startTimeSeconds": 0,
          },
        ],
      },
      "id": "prepare-source-for-technical-grade",
      "operation": "precompose",
      "server": "aftereffects",
      "timeoutMs": 30000,
      "tool": "execute_extend_script",
      "verify": {
        "properties": {
          "structuredContent": {
            "required": [
              "layerId",
            ],
            "type": "object",
          },
        },
        "required": [
          "structuredContent",
        ],
        "type": "object",
      },
    },
    {
      "args": {
        "script_string": "/* applyEffect: rendered at run time */",
      },
      "contractArgs": {
        "atTimeSeconds": 0,
        "durationSeconds": "\${steps.inspect-source-metadata.result.structuredContent.durationSeconds}",
        "effect": "Exposure",
        "settings": {
          "Exposure": 0,
          "Gamma Correction": 1,
          "Offset": 0,
        },
        "targetId": "\${steps.prepare-source-for-technical-grade.result.structuredContent.layerId}",
      },
      "id": "bounded-exposure-normalization",
      "operation": "applyEffect",
      "server": "aftereffects",
      "timeoutMs": 30000,
      "tool": "execute_extend_script",
      "verify": {
        "properties": {
          "structuredContent": {
            "properties": {
              "appliedParameterCount": {
                "equals": 3,
                "type": "number",
              },
              "refusedParameters": {
                "equals": [],
                "type": "array",
              },
            },
            "required": [
              "appliedParameterCount",
              "refusedParameters",
            ],
            "type": "object",
          },
        },
        "required": [
          "structuredContent",
        ],
        "type": "object",
      },
    },
    {
      "args": {
        "script_string": "/* applyEffect: rendered at run time */",
      },
      "contractArgs": {
        "atTimeSeconds": 0,
        "durationSeconds": "\${steps.inspect-source-metadata.result.structuredContent.durationSeconds}",
        "effect": "Levels",
        "settings": {
          "Clip To Output Black": 1,
          "Clip To Output White": 1,
          "Gamma": 1,
          "Input Black": 0,
          "Input White": 1,
          "Output Black": 0,
          "Output White": 1,
        },
        "targetId": "\${steps.prepare-source-for-technical-grade.result.structuredContent.layerId}",
      },
      "id": "broadcast-safe-levels-clamp",
      "operation": "applyEffect",
      "server": "aftereffects",
      "timeoutMs": 30000,
      "tool": "execute_extend_script",
      "verify": {
        "properties": {
          "structuredContent": {
            "properties": {
              "appliedParameterCount": {
                "equals": 7,
                "type": "number",
              },
              "refusedParameters": {
                "equals": [],
                "type": "array",
              },
            },
            "required": [
              "appliedParameterCount",
              "refusedParameters",
            ],
            "type": "object",
          },
        },
        "required": [
          "structuredContent",
        ],
        "type": "object",
      },
    },
    {
      "args": {
        "script_string": "/* queueRender: rendered at run time */",
      },
      "contractArgs": {
        "bitDepth": 10,
        "codec": "ProRes 422 HQ",
        "colorSpace": "Rec.2100 HLG",
        "compId": "\${steps.build-source-matched-composition.result.structuredContent.compId}",
        "format": "QuickTime",
        "outputModuleTemplate": "IG HDR HLG ProRes",
        "outputPath": "/renders/hlg-master.mp4",
        "postProcess": "hevc-hlg",
        "renderSettings": {
          "alpha": false,
          "colorManagement": "preserve-hlg",
          "quality": "best",
          "renderAtMaximumDepth": true,
        },
      },
      "id": "queue-verified-10bit-hlg-render",
      "note": "Conductor renders a 10-bit ProRes intermediate, encodes HEVC Main 10 with BT.2020/HLG tags, and validates the delivered file before reporting success.",
      "operation": "queueRender",
      "server": "aftereffects",
      "timeoutMs": 30000,
      "tool": "execute_extend_script",
      "verify": {
        "properties": {
          "structuredContent": {
            "properties": {
              "outputPath": {
                "type": "string",
              },
              "postProcess": {
                "equals": "hevc-hlg",
                "type": "string",
              },
              "queued": {
                "equals": true,
                "type": "boolean",
              },
              "renderPath": {
                "type": "string",
              },
              "templateApplied": {
                "equals": "IG HDR HLG ProRes",
                "type": "string",
              },
            },
            "required": [
              "queued",
              "outputPath",
              "renderPath",
              "templateApplied",
              "postProcess",
            ],
            "type": "object",
          },
        },
        "required": [
          "structuredContent",
        ],
        "type": "object",
      },
    },
  ],
  "title": "HDR-Safe Technical Grade",
}
`;

exports[`reference recipe dry runs > snapshots the motivated-transition checklist 1`] = `
{
  "params": {
    "clipA": "/media/clip-a.mov",
    "clipB": "/media/clip-b.mov",
    "outputPath": "/renders/motivated-transition.mov",
    "style": "luma-wipe",
  },
  "recipeId": "motivated-transition",
  "steps": [
    {
      "args": {
        "script_string": "/* projectInfo: rendered at run time */",
      },
      "contractArgs": {
        "action": "inspect",
        "settings": {},
      },
      "id": "inspect-edit-project",
      "operation": "projectInfo",
      "server": "aftereffects",
      "timeoutMs": 30000,
      "tool": "execute_extend_script",
      "verify": {
        "required": [
          "structuredContent",
        ],
        "type": "object",
      },
    },
    {
      "args": {
        "script_string": "/* createComp: rendered at run time */",
      },
      "contractArgs": {
        "backgroundColor": "#000000",
        "durationSeconds": 6,
        "frameRate": 24,
        "height": 1080,
        "name": "Conductor Motivated Transition",
        "pixelAspect": 1,
        "width": 1920,
      },
      "id": "build-transition-composition",
      "operation": "createComp",
      "server": "aftereffects",
      "timeoutMs": 30000,
      "tool": "execute_extend_script",
      "verify": {
        "properties": {
          "structuredContent": {
            "required": [
              "compId",
            ],
            "type": "object",
          },
        },
        "required": [
          "structuredContent",
        ],
        "type": "object",
      },
    },
    {
      "args": {
        "script_string": "/* precompose: rendered at run time */",
      },
      "contractArgs": {
        "collapseTransformations": false,
        "compId": "\${steps.build-transition-composition.result.structuredContent.compId}",
        "layerIds": [],
        "motionBlur": true,
        "name": "Outgoing Clip",
        "sources": [
          {
            "path": "/media/clip-a.mov",
            "role": "outgoing",
            "startTimeSeconds": 0,
          },
        ],
      },
      "id": "prepare-outgoing-clip",
      "operation": "precompose",
      "server": "aftereffects",
      "timeoutMs": 30000,
      "tool": "execute_extend_script",
      "verify": {
        "properties": {
          "structuredContent": {
            "required": [
              "layerId",
            ],
            "type": "object",
          },
        },
        "required": [
          "structuredContent",
        ],
        "type": "object",
      },
    },
    {
      "args": {
        "script_string": "/* precompose: rendered at run time */",
      },
      "contractArgs": {
        "collapseTransformations": false,
        "compId": "\${steps.build-transition-composition.result.structuredContent.compId}",
        "layerIds": [],
        "motionBlur": true,
        "name": "Incoming Clip",
        "sources": [
          {
            "path": "/media/clip-b.mov",
            "role": "incoming",
            "startTimeSeconds": 2.5,
          },
        ],
      },
      "id": "prepare-incoming-clip",
      "operation": "precompose",
      "server": "aftereffects",
      "timeoutMs": 30000,
      "tool": "execute_extend_script",
      "verify": {
        "properties": {
          "structuredContent": {
            "required": [
              "layerId",
            ],
            "type": "object",
          },
        },
        "required": [
          "structuredContent",
        ],
        "type": "object",
      },
    },
    {
      "args": {
        "script_string": "/* applyEffect: rendered at run time */",
      },
      "contractArgs": {
        "atTimeSeconds": 2.5,
        "durationSeconds": 1,
        "effect": "Directional Luma Matte",
        "settings": {
          "directionDegrees": 0,
          "featherPixels": 140,
          "source": "procedural-ramp",
          "travelDirection": "left-to-right",
        },
        "targetId": "\${steps.prepare-incoming-clip.result.structuredContent.layerId}",
      },
      "id": "directional-luma-matte",
      "operation": "applyEffect",
      "precondition": "\${params.style} == "luma-wipe"",
      "server": "aftereffects",
      "timeoutMs": 30000,
      "tool": "execute_extend_script",
      "verify": {
        "properties": {
          "structuredContent": {
            "required": [
              "effectId",
            ],
            "type": "object",
          },
        },
        "required": [
          "structuredContent",
        ],
        "type": "object",
      },
    },
    {
      "args": {
        "script_string": "/* setKeyframes: rendered at run time */",
      },
      "contractArgs": {
        "easing": {
          "controlPoints": [
            0.25,
            0.1,
            0.25,
            1,
          ],
          "profile": "directional-wipe",
          "type": "cubic-bezier",
        },
        "keyframes": [
          {
            "time": 2.55,
            "value": 0,
          },
          {
            "time": 3.45,
            "value": 100,
          },
        ],
        "layerId": "\${steps.directional-luma-matte.result.structuredContent.effectId}",
        "motionBlur": false,
        "property": "progress",
        "timeMode": "seconds",
      },
      "id": "luma-wipe-directional-progress",
      "operation": "setKeyframes",
      "precondition": "\${params.style} == "luma-wipe"",
      "server": "aftereffects",
      "timeoutMs": 30000,
      "tool": "execute_extend_script",
      "verify": {
        "required": [
          "structuredContent",
        ],
        "type": "object",
      },
    },
    {
      "args": {
        "script_string": "/* queueRender: rendered at run time */",
      },
      "contractArgs": {
        "bitDepth": 10,
        "codec": "ProRes 422",
        "colorSpace": "Rec.709 Gamma 2.4",
        "compId": "\${steps.build-transition-composition.result.structuredContent.compId}",
        "format": "QuickTime",
        "outputPath": "/renders/motivated-transition.mov",
        "renderSettings": {
          "frameBlending": true,
          "motionBlur": true,
          "quality": "best",
        },
      },
      "id": "queue-verified-transition-render",
      "note": "Transition is motivated by light, luminance direction, or matched movement; no unmotivated crossfade is present.",
      "operation": "queueRender",
      "server": "aftereffects",
      "timeoutMs": 30000,
      "tool": "execute_extend_script",
      "verify": {
        "properties": {
          "structuredContent": {
            "properties": {
              "outputPath": {
                "type": "string",
              },
              "queued": {
                "equals": true,
                "type": "boolean",
              },
            },
            "required": [
              "queued",
              "outputPath",
            ],
            "type": "object",
          },
        },
        "required": [
          "structuredContent",
        ],
        "type": "object",
      },
    },
  ],
  "title": "Motivated Transition",
}
`;

exports[`reference recipe dry runs > snapshots the title-card checklist 1`] = `
{
  "params": {
    "duration": 4,
    "font": "Sans Serif",
    "inOutStyle": "rise",
    "outputPath": "/renders/title-card.mov",
    "sizePreset": "medium",
    "text": "Reference Title",
  },
  "recipeId": "title-card",
  "steps": [
    {
      "args": {
        "script_string": "/* projectInfo: rendered at run time */",
      },
      "contractArgs": {
        "action": "inspect",
        "settings": {},
      },
      "id": "inspect-project-state",
      "operation": "projectInfo",
      "server": "aftereffects",
      "timeoutMs": 30000,
      "tool": "execute_extend_script",
      "verify": {
        "required": [
          "structuredContent",
        ],
        "type": "object",
      },
    },
    {
      "args": {
        "script_string": "/* createComp: rendered at run time */",
      },
      "contractArgs": {
        "backgroundColor": "#101010",
        "durationSeconds": 4,
        "frameRate": 24,
        "height": 1080,
        "name": "Conductor Title Card",
        "pixelAspect": 1,
        "width": 1920,
      },
      "id": "build-title-composition",
      "operation": "createComp",
      "server": "aftereffects",
      "timeoutMs": 30000,
      "tool": "execute_extend_script",
      "verify": {
        "properties": {
          "structuredContent": {
            "required": [
              "compId",
            ],
            "type": "object",
          },
        },
        "required": [
          "structuredContent",
        ],
        "type": "object",
      },
    },
    {
      "args": {
        "script_string": "/* addTextLayer: rendered at run time */",
      },
      "contractArgs": {
        "alignment": "center",
        "color": "#F2F2F2",
        "compId": "\${steps.build-title-composition.result.structuredContent.compId}",
        "font": "Sans Serif",
        "motionBlur": true,
        "name": "Primary Title",
        "position": [
          960,
          540,
        ],
        "sizePreset": "medium",
        "text": "Reference Title",
      },
      "id": "place-centered-title-layer",
      "operation": "addTextLayer",
      "server": "aftereffects",
      "timeoutMs": 30000,
      "tool": "execute_extend_script",
      "verify": {
        "properties": {
          "structuredContent": {
            "required": [
              "layerId",
            ],
            "type": "object",
          },
        },
        "required": [
          "structuredContent",
        ],
        "type": "object",
      },
    },
    {
      "args": {
        "script_string": "/* setKeyframes: rendered at run time */",
      },
      "contractArgs": {
        "easing": {
          "controlPoints": [
            0.16,
            1.2,
            0.3,
            1,
          ],
          "profile": "overshoot-settle",
          "type": "cubic-bezier",
        },
        "keyframes": [
          {
            "time": 0,
            "value": 640,
          },
          {
            "time": 0.14,
            "value": 522,
          },
          {
            "time": 0.22,
            "value": 540,
          },
        ],
        "layerId": "\${steps.place-centered-title-layer.result.structuredContent.layerId}",
        "motionBlur": true,
        "property": "positionY",
        "timeMode": "normalized",
      },
      "id": "entrance-overshoot-keyframes",
      "operation": "setKeyframes",
      "precondition": "\${params.inOutStyle} == "rise"",
      "server": "aftereffects",
      "timeoutMs": 30000,
      "tool": "execute_extend_script",
      "verify": {
        "required": [
          "structuredContent",
        ],
        "type": "object",
      },
    },
    {
      "args": {
        "script_string": "/* setKeyframes: rendered at run time */",
      },
      "contractArgs": {
        "easing": {
          "controlPoints": [
            0.4,
            0,
            0.7,
            1,
          ],
          "profile": "gentle-exit",
          "type": "cubic-bezier",
        },
        "keyframes": [
          {
            "time": 0.82,
            "value": {
              "opacity": 100,
              "positionY": 540,
            },
          },
          {
            "time": 1,
            "value": {
              "opacity": 0,
              "positionY": 490,
            },
          },
        ],
        "layerId": "\${steps.place-centered-title-layer.result.structuredContent.layerId}",
        "motionBlur": true,
        "property": "positionYOpacity",
        "timeMode": "normalized",
      },
      "id": "rise-gentle-exit-keyframes",
      "operation": "setKeyframes",
      "precondition": "\${params.inOutStyle} == "rise"",
      "server": "aftereffects",
      "timeoutMs": 30000,
      "tool": "execute_extend_script",
      "verify": {
        "required": [
          "structuredContent",
        ],
        "type": "object",
      },
    },
    {
      "args": {
        "script_string": "/* queueRender: rendered at run time */",
      },
      "contractArgs": {
        "bitDepth": 10,
        "codec": "ProRes 422",
        "colorSpace": "Rec.709 Gamma 2.4",
        "compId": "\${steps.build-title-composition.result.structuredContent.compId}",
        "format": "QuickTime",
        "outputPath": "/renders/title-card.mov",
        "renderSettings": {
          "frameBlending": false,
          "motionBlur": true,
          "quality": "best",
        },
      },
      "id": "queue-verified-title-render",
      "note": "Render queue handoff verified: confirm the reported output path before supervised rendering.",
      "operation": "queueRender",
      "server": "aftereffects",
      "timeoutMs": 30000,
      "tool": "execute_extend_script",
      "verify": {
        "properties": {
          "structuredContent": {
            "properties": {
              "outputPath": {
                "type": "string",
              },
              "queued": {
                "equals": true,
                "type": "boolean",
              },
            },
            "required": [
              "queued",
              "outputPath",
            ],
            "type": "object",
          },
        },
        "required": [
          "structuredContent",
        ],
        "type": "object",
      },
    },
  ],
  "title": "Professional Title Card",
}
`;
